WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143285
WKView should stop using endGestureWithEvent
https://bugs.webkit.org/show_bug.cgi?id=143285
Summary
WKView should stop using endGestureWithEvent
Tim Horton
Reported
2015-03-31 17:05:47 PDT
WKView should stop using endGestureWithEvent
Attachments
Stop using endGestureWithEvent
(5.18 KB, patch)
2015-03-31 17:06 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-03-31 17:06:21 PDT
Created
attachment 249869
[details]
Stop using endGestureWithEvent
Tim Horton
Comment 2
2015-03-31 17:06:33 PDT
rdar://problem/20357007
Tim Horton
Comment 3
2015-03-31 18:17:09 PDT
http://trac.webkit.org/changeset/182216
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug