WKView should stop using endGestureWithEvent https://bugs.webkit.org/show_bug.cgi?id=143285 <rdar://problem/20357007>

Reviewed by Simon Fraser.

* UIProcess/API/mac/WKView.mm:
(-[WKView magnifyWithEvent:]):
(-[WKView endGestureWithEvent:]): Deleted.
* UIProcess/mac/ViewGestureController.h:
* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::endMagnificationGesture):
(WebKit::ViewGestureController::endActiveGesture): Deleted.
While there is no visible symptom, it is recommended that we check
the phase of normal magnification events instead of using the
special gesture end events.


Canonical link: https://commits.webkit.org/161314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182216 268f45cc-cd09-0410-ab3c-d52691b4dbfc